<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_settings_label"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_name_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_name_hint"
        android:id="@+id/settings_name_field"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_id_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_id_hint"
        android:id="@+id/settings_id_field"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_email_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_email_hint"
        android:id="@+id/settings_email_field"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_gender_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_gender_hint"
        android:id="@+id/settings_gender_field"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_comment_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_comment_hint"
        android:id="@+id/settings_comment_field"/>

</LinearLayout>